--- a/.gitignore
+++ b/.gitignore
@@ -100,10 +100,8 @@ ENV/
 # mypy
 .mypy_cache/
 
-# ignore data, models and figures
-data
-models
-figures
+# ignore var
+var
 
 # pycharm files
 .idea
